--- a/mc-chest-slots-counter-with-minesweeper/index.html
+++ b/mc-chest-slots-counter-with-minesweeper/index.html
@@ -533,7 +533,7 @@
     <div class="lb-panel" id="lb-panel">
       <div class="lb-title">
         <span>🏆 Best Times (9×9 · 12 mines)</span>
-        <span class="lb-clear-btn" onclick="clearLeaderboard()">Reset</span>
+        <!-- <span class="lb-clear-btn" onclick="clearLeaderboard()">Reset</span> -->
       </div>
       <div id="lb-rows"></div>
     </div>
