--- a/mc-chest-slots-counter-with-minesweeper/index.html
+++ b/mc-chest-slots-counter-with-minesweeper/index.html
@@ -566,6 +566,8 @@
 <button class="clear-btn" onclick="clearChestSelection()">Clear Selection</button>
 
 <script>
+  const GIST_ID = '990d1d6c1d099ce327734a450e7ee8cb';
+  const GIST_TOKEN = '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';
   // ─── RESPONSIVE CELL SIZE ─────────────────────────────────────────
   function setCellSize() {
     const maxW = Math.min(window.innerWidth - 24, 400);
