--- a/mc-chest-slots-counter-with-minesweeper/index.html
+++ b/mc-chest-slots-counter-with-minesweeper/index.html
@@ -566,8 +566,6 @@
 <button class="clear-btn" onclick="clearChestSelection()">Clear Selection</button>
 
 <script>
-  const GIST_ID = '990d1d6c1d099ce327734a450e7ee8cb';
-  const GIST_TOKEN = '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';
   // ─── RESPONSIVE CELL SIZE ─────────────────────────────────────────
   function setCellSize() {
     const maxW = Math.min(window.innerWidth - 24, 400);
@@ -720,8 +718,8 @@
 
   // ─── PLAYER REGISTRATION ──────────────────────────────────────────
   // ─── GIST CONFIG — fill these in ─────────────────────────────────
-  const GIST_ID    = 'YOUR_GIST_ID';       // e.g. 'a1b2c3d4e5f6...'
-  const GIST_TOKEN = 'YOUR_GITHUB_TOKEN';  // e.g. 'github_pat_...'
+  const GIST_ID    = '990d1d6c1d099ce327734a450e7ee8cb';       // e.g. 'a1b2c3d4e5f6...'
+  const GIST_TOKEN = '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';  // e.g. 'github_pat_...'
   const GIST_FILE  = 'leaderboard.json';
   // ──────────────────────────────────────────────────────────────────
 
