--- a/mc-chest-slots-counter-with-minesweeper/index.html
+++ b/mc-chest-slots-counter-with-minesweeper/index.html
@@ -718,8 +718,8 @@
 
   // ─── PLAYER REGISTRATION ──────────────────────────────────────────
   // ─── GIST CONFIG — fill these in ─────────────────────────────────
-  const GIST_ID    = '990d1d6c1d099ce327734a450e7ee8cb';       // e.g. 'a1b2c3d4e5f6...'
-  const GIST_TOKEN = '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';  // e.g. 'github_pat_...'
+  const GIST_ID    = 'YOUR_GIST_ID';       // e.g. 'a1b2c3d4e5f6...'
+  const GIST_TOKEN = 'YOUR_GITHUB_TOKEN';  // e.g. 'github_pat_...'
   const GIST_FILE  = 'leaderboard.json';
   // ──────────────────────────────────────────────────────────────────
 
@@ -775,11 +775,22 @@
 
   // Fetch current entries from Gist
   async function fetchEntries() {
-    const res = await fetch(GIST_API, { headers: GIST_HEADERS });
-    if (!res.ok) throw new Error('Gist fetch failed: ' + res.status);
+    let res;
+    try {
+      res = await fetch(GIST_API, { headers: GIST_HEADERS });
+    } catch(netErr) {
+      throw new Error('Network/CORS error: ' + netErr.message);
+    }
+    if (!res.ok) {
+      let body = '';
+      try { body = await res.text(); } catch(_) {}
+      throw new Error('HTTP ' + res.status + ': ' + body.slice(0, 200));
+    }
     const data = await res.json();
-    const content = data.files[GIST_FILE]?.content || '[]';
-    return JSON.parse(content);
+    if (!data.files) throw new Error('No files in Gist response');
+    const file = data.files[GIST_FILE];
+    if (!file) throw new Error('File "' + GIST_FILE + '" not found. Gist has: ' + Object.keys(data.files).join(', '));
+    return JSON.parse(file.content || '[]');
   }
 
   // Write updated entries back to Gist
@@ -808,7 +819,7 @@
       const entries = await fetchEntries();
       renderLeaderboard(entries);
     } catch(e) {
-      rowsEl.innerHTML = '<div class="lb-empty" style="color:#c33">Failed to load. Check your Gist config.</div>';
+      rowsEl.innerHTML = '<div class="lb-empty" style="color:#c33;font-style:normal">' + e.message + '</div>';
     }
   }
 
