--- a/mc-chest-slots-counter-with-minesweeper/index.html
+++ b/mc-chest-slots-counter-with-minesweeper/index.html
@@ -718,8 +718,8 @@
 
   // ─── PLAYER REGISTRATION ──────────────────────────────────────────
   // ─── GIST CONFIG — fill these in ─────────────────────────────────
-  const GIST_ID    = 'YOUR_GIST_ID';       // e.g. 'a1b2c3d4e5f6...'
-  const GIST_TOKEN = 'YOUR_GITHUB_TOKEN';  // e.g. 'github_pat_...'
+  const GIST_ID    = '990d1d6c1d099ce327734a450e7ee8cb';       // e.g. 'a1b2c3d4e5f6...'
+  const GIST_TOKEN = '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';  // e.g. 'github_pat_...'
   const GIST_FILE  = 'leaderboard.json';
   // ──────────────────────────────────────────────────────────────────
 
